udisks2: Remove optical disc volumes/mounts if drive disappears

If an optical drive is hard-unplugged without ejecting a media first (or
the corresponding UDisksDrive object simply disappears from D-Bus for
example due to the udisksd termination) and an audio disk or an empty
media is inside, corresponding volumes/mounts are not properly removed.
Consequently, the number of the volumes/mounts increase when plugging
and unplugging such drive. This happens because those kinds of volumes/
mounts are handled by their drives in the monitor. Unfortunately, the
drive is removed before processing them and the mounts/volumes without
the drives are ignored consequently.

Let's do not rely on the drives and handle those volumes/mounts over
corresponding UDisksBlock objects, same as it is done for other kinds of
volumes.

https://bugzilla.gnome.org/show_bug.cgi?id=719423